kubernetes/bitwarden/overlays/k3s/traefik.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: https-redirect
  namespace: bitwarden
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bitwarden
  namespace: bitwarden
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`bitwarden.arthurvardevanyan.com`)
      kind: Rule
      services:
        - name: bitwarden
          port: 80
      middlewares:
        - name: https-redirect
  tls:
    domains:
      - main: bitwarden.arthurvardevanyan.com
